libs/@local/hashql/ast/tests/ui/lower/special-form-expander/too-many-segments.jsonc
//@ run: fail
//@ description: check if we error out if the path has too many segments
[
  "::kernel::special_form::if::extra",
  //~^ ERROR Remove this extra segment
  { "#literal": true },
  { "#literal": 1 },
  { "#literal": 2 }
]
